Adapt code to guidelines, check target for VariablesMap, unnecessary check for string removed, change new Integer(...) to Integer.valueOf(...)